# f1-telemetry

./: README.md  pyproject.toml
.github/workflows/: release.yaml
boards/: live_data.json
f1_telemetry/: __main__.py  collector.py  live.py  model.py  report.py  server.py  storage.py  view.py
f1_telemetry/webapp/: index.html  live.html  live.js  plots.js  queries.js  style.css  trace.js  utils.js  view.js
webapp/: data.js  index.html  plots.js  style.css
